--- a/index.html
+++ b/index.html
@@ -416,113 +416,28 @@
 
   <div class="page">
     <main class="shell">
-      <header class="hero">
-        <!-- Left side: copy -->
-        <div>
-          <div class="pill">
-            <span class="pill-dot"></span>
-            Built for spine & nerve recovery
-          </div>
+<section class="top-grid">
+  <header class="hero">
+    <!-- Left side: copy -->
+    <div class="hero-left">
+      ...
+    </div>
 
-          <h1>Recovery you can <strong>see</strong> — so you’re not relying on memory alone.</h1>
+    <!-- Right side: Why Recoverly -->
+    <aside class="card hero-right">
+      ...
+    </aside>
+  </header>
 
-          <p class="subtle-note">
-            Recoverly doesn’t define what’s medically normal — it simply helps you understand how
-            <em>your own</em> symptoms change over time.
-          </p>
-
-          <p>
-            Recoverly helps you track back pain, nerve symptoms, and daily activity — so you can clearly see how your recovery changes over time.
-          </p>
-
-          <div class="hero-meta">
-            <span class="badge">Post-surgery friendly</span>
-            <span class="badge">No account required</span>
-            <span>Designed by a real spine-surgery patient.</span>
-          </div>
-
-          <!-- Personal story line -->
-          <p class="subtle-note">
-            I’m Rich, and I built Recoverly after my own lumbar spine surgery, when I kept forgetting
-            which days were actually better or worse.
-          </p>
-
-          <p class="subtle-note">
-            No account, no cloud — your recovery data stays on your device unless you choose to export
-            a PDF.
-          </p>
-
-          
-          <div class="cta-row">
-            <a
-              class="btn-primary"
-              href="https://apps.apple.com/us/app/recoverly-recovery-tracker/id6756222251"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              Download on the App Store
-            </a>
-
-
-            <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
-              Contact us
-            </a>
-          </div>
-
-          <p class="note-text">Questions or feedback? Reach out anytime.</p>
-
-          <p class="note-text">
-            Recoverly doesn’t replace your surgeon or physical therapist. It’s a tool to help you
-            remember the details and see how your symptoms and activity are trending between visits.
-          </p>
-        </div>
-
-        <!-- Right side: Why Recoverly -->
-        <aside class="card">
-          <h3>Why Recoverly?</h3>
-          <h2>Turn hazy weeks into clear, understandable trends.</h2>
-          <p>
-            The first weeks after surgery blur together. Was today better than last Tuesday? Are
-            tingling and spasms easing up, or just moving around?
-          </p>
-          <p>
-            <strong>Best for:</strong> lumbar surgery, nerve decompression, fusion, or similar
-            back/nerve procedures.
-          </p>
-          <p>
-            Recoverly gives you a simple way to log each day and see those “I think so…” answers
-            become clear charts.
-          </p>
-
-          <ul class="list-check">
-            <li>
-              <span class="icon">✔</span>
-              <span>
-                Built around common lumbar and nerve symptoms: back pain, hip/glute pain, leg nerve
-                pain, tingling, and spasms.
-              </span>
-            </li>
-            <li>
-              <span class="icon">✔</span>
-              <span>
-                Track walking and sitting tolerance so you can see how activity changes week to week.
-              </span>
-            </li>
-            <li>
-              <span class="icon">✔</span>
-              <span>Designed to be used once a day in under a minute.</span>
-            </li>
-          </ul>
-        </aside>
-      </header>
-    <section class="card" style="margin-bottom: 24px;">
-  <h3>How Recoverly works</h3>
-  <h2>A simple daily flow — built for real recovery.</h2>
-  <ul class="list-check">
-    <li><span class="icon">✔</span><span>Log your day once — pain, nerve symptoms, movement, and notes.</span></li>
-    <li><span class="icon">✔</span><span>See clearer patterns in History and Insights week over week.</span></li>
-    <li><span class="icon">✔</span><span>Export a clean PDF summary before follow-up visits.</span></li>
-  </ul>
+  <section class="card works-card" style="margin-bottom: 24px;">
+    <h3>How Recoverly works</h3>
+    <h2>A simple daily flow — built for real recovery.</h2>
+    <ul class="list-check">
+      <li><span class="icon">✔</span><span>Log your day once — pain, nerve symptoms, movement, and notes.</span></li>
+      <li><span class="icon">✔</span><span>See clearer patterns in History and Insights week over week.</span></li>
+      <li><span class="icon">✔</span><span>Export a clean PDF summary before follow-up visits.</span></li>
+    </ul>
+  </section>
 </section>
       
       <!-- Two main cards -->
